# plot-cli

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
src/plot/: __init__.py  data.py  provider.py
src/plot/core/: __init__.py  config.py  exceptions.py  logging.py  platform.py
src/plot/data/: __init__.py
src/plot_cli/: __init__.py  config.py  data.py  plot.py  provider.py  query.py
src/plot_cli/core/: ansi.py  config.py  exceptions.py  logging.py  platform.py
tests/: test_app.py  test_cli.py  test_query.py
