[tool.poetry]
name = "plot-cli"
version = "0.3.0"
description = "Simple command-line plotting tool."
readme = "README.md"
homepage = "https://github.com/glentner/plot-cli"
documentation = "https://plot-cli.readthedocs.io"
repository = "https://github.com/glentner/plot-cli"
authors = [
    "Geoffrey Lentner <glentner@purdue.edu>",
]
keywords = ["command-line", "plotting", "utility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.scripts]
plot-cli = "plot_cli:main"
plot = "plot_cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
cmdkit = {extras = ["toml"], version = "^2.7.2"}
pandas = "^2.1.1"
tplot = "^0.3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
hypothesis = "^6.87.3"
ipython = "^8.16.1"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-sitemap = "^2.5.1"
sphinx-autobuild = "^2021.3.14"
sphinx-copybutton = "^0.5.2"
sphinxext-opengraph = "^0.8.2"
sphinxcontrib-details-directive = "^0.1.0"
sphinx-toolbox = "^3.5.0"
pydata-sphinx-theme = "^0.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--rootdir", "tests", "--strict-markers", ]
markers = [
    "unit: Unit tests are short, interface driven tests on discrete components.",
    "integration: Integration tests are often longer and deal with the interaction between systems.",
    "parameterize: Place holder for parameterized tests (not a real type).",
]
