[tool.poetry]
name = "plot-cli"
version = "0.3.1"
description = "Simple command-line plotting tool."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/glentner/plot-cli"
documentation = "https://plot-cli.readthedocs.io"
repository = "https://github.com/glentner/plot-cli"
authors = [
    "Geoffrey Lentner <glentner@purdue.edu>",
]
keywords = ["command-line", "plotting", "utility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.scripts]
plot-cli = "plot_cli:main"
plot = "plot_cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
cmdkit = {extras = ["toml"], version = "^2.7.4"}
pandas = "^2.1.1"
tplot = "^0.3.4"

[tool.poetry.group.dev.dependencies]
ipython = "^8.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--rootdir", "tests", "--strict-markers", ]
markers = [
    "unit: Unit tests are short, interface driven tests on discrete components.",
    "integration: Integration tests are often longer and deal with the interaction between systems.",
    "parameterize: Place holder for parameterized tests (not a real type).",
]
