[project]
name = "plot-cli"
version = "0.4.0"
description = "Simple command-line plotting tool."
authors = [
    { name = "Geoffrey Lentner", email = "glentner@purdue.edu" },
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/glentner/plot-cli"
repository = "https://github.com/glentner/plot-cli"
documentation = "https://plot-cli.readthedocs.io"
keywords = [
    "command-line",
    "plotting",
    "utility",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
    "cmdkit[toml]>=2.7.7",
    "pandas>=2.2.2",
    "tplot>=0.3.4",
    "duckdb>=1.0.0",
    "pyarrow>=15.0.0",
]

[dependency-groups]
dev = [
    "ipython>=8.26.0",
    "pytest>=8.3.2",
    "hatchling>=1.27.0",
]

[project.scripts]
plot-cli = "plot_cli:main"
plot = "plot_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = ["--rootdir", "tests", "--strict-markers", ]
markers = [
    "unit: Unit tests are short, interface driven tests on discrete components.",
    "integration: Integration tests are often longer and deal with the interaction between systems.",
    "parameterize: Place holder for parameterized tests (not a real type).",
]
